<resources>
    <string name="admob_banner_id">@string/lib_crs_admob_banner_id</string>
    <string name="admob_full_id">@string/lib_crs_admob_full_id</string>
    <string name="ad_native_advanced_id">ca-app-pub-3940256099942544/2247696110</string>

    <string name="app_name">VoiceChanger</string>
    <string name="recorder">Recorder</string>
    <string name="audio_tune">Audio Tune</string>
    <string name="loop">Loop</string>
    <string name="setting">Setting</string>
    <string name="studio">Studio</string>
    <string name="save">Save</string>
    <string name="more_app">More app</string>
    <string name="rate_app">Rate</string>
    <string name="about">About</string>
    <string name="grand_permission">Please grand permission to coutinue!</string>
    <string name="stopRecord">Stopped record!</string>
    <string name="startRecord">Started record!</string>
    <string name="record">Record</string>
    <string name="recording">Recording</string>
    <string name="my_studio">My studio</string>
    <string name="cancel">Cancel</string>
    <string name="ok">OK</string>
    <string name="enter_adjustment">Enter adjustment</string>
    <string name="enter_new_tempo">Enter new tempo adjustment.</string>
    <string name="enter_new_pitch">Enter new pitch adjustment.</string>
    <string name="enter_new_rate">Enter new rate adjustment.</string>
    <string name="please_input_value">Please enter value!</string>
    <string name="link_pitch_and_tempo">Link pitch and tempo</string>
    <string name="compine_pitch">Compine pitch and tempo controls into one</string>
    <string name="keep_screen_on">Keep screen on</string>
    <string name="screen_stay_on">Screen stays on when player is in foreground</string>
    <string name="btn_prev">Previous</string>
    <string name="pause">Pause</string>
    <string name="play">Play</string>
    <string name="next">Next</string>
    <string name="file_fail">File is failed!</string>
    <string name="save_file_success">Save file success</string>
    <string name="please_kill_app_play_again">Please kill app and play again!</string>
    <string name="recorder_encording">Recorder Encoding</string>
    <string name="local_save_file">Local save file</string>
    <string name="status_bar">Status bar</string>
    <string name="search">Search</string>
    <string name="recorder_file_format">Recorder file format</string>
    <string name="set_type_file">Set type file is:</string>
    <string name="set_bitrate">Set bitrate is:</string>
    <string name="enable">Enable</string>
    <string name="disable">Disable</string>
    <string name="no_file_selected">No File Selected</string>
    <string name="save_audio">Save audio</string>
    <string name="please_input_name_video">Please enter audio name!</string>
    <string name="video_name_is_exist">Audio name is exist!</string>
    <string name="saved_file">Create file voice changer</string>
    <string name="file_is_exist">File is exist!</string>
    <string name="open_file_with">Open file with</string>
    <string name="set_as">Set as ringtone</string>
    <string name="cut_audio">Cut file</string>
    <string name="rename">Rename</string>
    <string name="delete_file">Delete</string>
    <string name="detail">Detail</string>
    <string name="share">Share</string>
    <string name="title_audio">Title</string>
    <string name="path">Path</string>
    <string name="duration">Duration</string>
    <string name="size">Size</string>
    <string name="date_time">Date time</string>
    <string name="input_name_record_again">Please enter name record!</string>
    <string name="rename_success">Rename success!</string>
    <string name="same_name_file">File name is exist, please try again!</string>
    <string name="fail_rename">Rename is failed!</string>
    <string name="sure_delete_audio">Are you sure want to delete this file?</string>
    <string name="delete_success">Delete success!</string>
    <string name="set_ring_tone_success">Set ringtone success!</string>
    <string name="checked_all">Check all</string>
    <string name="delete_record">Delete record</string>
    <string name="delete_this_record">Are you sure want to delete this record!</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="device">Device</string>
    <string name="select_song">Select song</string>
    <string name="please_choose_file">Please choose songs you want to play!</string>
    <string name="version">Version</string>
</resources>
