<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/colorPrimary"
    android:padding="16dp">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/_7sdp"
        android:layout_marginStart="@dimen/_7sdp"
        android:layout_marginTop="@dimen/_7sdp"
        android:text="@string/detail"
        android:textColor="@color/colorAccent"
        android:textSize="@dimen/font_size_xlarge"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/_7sdp"
        android:layout_marginStart="@dimen/_7sdp"
        android:layout_marginTop="@dimen/_7sdp"
        android:text="@string/title_audio"
        android:textColor="#fff"
        android:textSize="@dimen/font_size_large"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <TextView
        android:id="@+id/tvFilePath"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/_7sdp"
        android:layout_marginStart="@dimen/_7sdp"
        android:layout_marginTop="@dimen/_7sdp"
        android:text="@string/path"
        android:textColor="#ffff"
        android:textSize="@dimen/font_size_large"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvTitle" />

    <TextView
        android:id="@+id/tvDuaration"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/_7sdp"
        android:layout_marginStart="@dimen/_7sdp"
        android:layout_marginTop="@dimen/_7sdp"
        android:text="@string/duration"
        android:textColor="#fff"
        android:textSize="@dimen/font_size_large"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvFilePath" />

    <TextView
        android:id="@+id/tvSize"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/_7sdp"
        android:layout_marginStart="@dimen/_7sdp"
        android:layout_marginTop="@dimen/_7sdp"
        android:text="@string/size"
        android:textColor="#fff"
        android:textSize="@dimen/font_size_large"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvDuaration" />

    <TextView
        android:id="@+id/tvDateTime"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/_7sdp"
        android:layout_marginLeft="@dimen/_7sdp"
        android:layout_marginStart="@dimen/_7sdp"
        android:layout_marginTop="@dimen/_7sdp"
        android:text="@string/date_time"
        android:textColor="#ffff"
        android:textSize="@dimen/font_size_large"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvSize"
        tools:ignore="RtlHardcoded" />

    <TextView
        android:id="@+id/btn_yes_detail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="@dimen/_7sdp"
        android:layout_marginEnd="@dimen/_7sdp"
        android:layout_marginRight="@dimen/_7sdp"
        android:layout_marginTop="@dimen/_7sdp"
        android:background="@drawable/handle_click"
        android:gravity="center"
        android:text="@string/ok"
        android:textColor="@color/colorAccent"
        android:textSize="@dimen/font_size_large"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvDateTime"
         />

</android.support.constraint.ConstraintLayout>