<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#fff"
    android:padding="@dimen/_14sdp">

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/_7sdp"
        android:layout_marginStart="@dimen/_7sdp"
        android:text="@string/save_audio"
        android:textColor="#000"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/edt_input_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_7sdp"
        android:maxLength="100"
        android:maxLines="1"
        android:paddingEnd="@dimen/_7sdp"
        android:paddingLeft="@dimen/_7sdp"
        android:paddingRight="@dimen/_7sdp"
        android:paddingStart="@dimen/_7sdp"
        android:textColor="#000"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView4" />

    <TextView
        android:id="@+id/tv_cancel"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/_27sdp"
        android:layout_marginLeft="@dimen/_14sdp"
        android:layout_marginStart="@dimen/_14sdp"
        android:layout_marginTop="@dimen/_14sdp"
        android:background="@drawable/handle_click"
        android:gravity="center"
        android:paddingEnd="@dimen/_7sdp"
        android:paddingLeft="@dimen/_7sdp"
        android:paddingRight="@dimen/_7sdp"
        android:paddingStart="@dimen/_7sdp"
        android:text="@string/cancel"
        android:textAllCaps="true"
        android:textColor="@color/colorAccent"
        app:layout_constraintEnd_toStartOf="@+id/tv_next"
        app:layout_constraintTop_toBottomOf="@+id/edt_input_name" />

    <TextView
        android:id="@+id/tv_next"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/_27sdp"
        android:layout_marginLeft="@dimen/_14sdp"
        android:layout_marginStart="@dimen/_14sdp"
        android:layout_marginTop="@dimen/_14sdp"
        android:background="@drawable/handle_click"
        android:gravity="center"
        android:paddingEnd="@dimen/_14sdp"
        android:paddingLeft="@dimen/_14sdp"
        android:paddingRight="@dimen/_14sdp"
        android:paddingStart="@dimen/_14sdp"
        android:text="@string/next"
        android:textAllCaps="true"
        android:textColor="@color/colorAccent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edt_input_name" />
</android.support.constraint.ConstraintLayout>